force-app/main/default/objects/Integration_UCPM_Org_PP__c/Integration_UCPM_Org_PP__c.object-meta.xml
<CustomObject>
    <label>Integration UCPM Org PP</label>
    <nameField>
        <displayFormat>OPP-{0000}</displayFormat>
        <label>Integration Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Integration UCPM Org PP</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>