force-app/main/default/objects/Integration_UCPM_Org_PP__c/fields/Error_message__c.field-meta.xml
<CustomField>
    <fullName>Error_message__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Error message</label>
    <type>TextArea</type>
</CustomField>