force-app/main/default/objects/Integration_UCPM_Org_PP__c/fields/JSON1__c.field-meta.xml
<CustomField>
    <fullName>JSON1__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>JSON1</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>