force-app/main/default/objects/Integration_UCPM_Org_PP__c/fields/JSON2__c.field-meta.xml
<CustomField>
    <fullName>JSON2__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>JSON2</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>