force-app/main/default/objects/Integration_UCPM_Org_PP__c/fields/Processing_Status__c.field-meta.xml
<CustomField>
    <fullName>Processing_Status__c</fullName>
    <label>Processing Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
                <default>true</default>
                <label>In Progress</label>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>